2009-09-18  Murray Cumming  <murrayc@murrayc.com>

	CSV Import: Minor code style changes.

	* glom/dialog_import_csv.cc:
	* glom/dialog_import_csv_progress.cc:
	* glom/import_csv.[h]cc]: Prefix the state enum with STATE_. 
	Use 0 instead of NULL because this is C++. Remove some debug output.
	Make signal type and variable names consistent with other code.
	* tests/import/test_signals.cc: Add a last std::endl.

2009-09-18  Murray Cumming  <murrayc@murrayc.com>

	Tests: Stop using valgrind by default.

	* Makefile_tests.am: Do not run all tests under valgrind. valgrind is 
	for humans to read, and make check has no way to know if the result is 
	appopriate or not. Run things under valgrind when you want to.

2009-09-17  Michael Hasselmann <michaelh@openismus.com>

Refactoring Dialog_Import_CSV: created testcase for the CsvParser's signal emission
	
	* Makefile_tests.am: all tests now run within valgrind by default since mem
	leaks in testcases are potential mem leaks in the application. Parameters might
	need tweaking.
	
	* glom/import_csv.cc (CsvParser::on_idle_parse): Fixed a missing negation in a
	conditional, which was wrongfully leading to signal emissions. Found by the
	import signals testcase.
	
	* test/import/test_parsing.cc: Fixed a null byte issue when setting the raw
	contents of the parser.
	
	* test/import/test_signals.cc: This testcase checks the CsvParser's signal
	emission on varying input. The basic idea was to have on testcase for each
	code path that leads to a signal emission in glom/import_csv.cc, even if that
	leads to overlapping code coverage tests with the parser testcase.

2009-09-17  Johannes Schmid  <jschmid@openismus.com>

	* Makefile_libglom.am: Don't link libglom
	statically on maemo. (#594355)

2009-09-17  Johannes Schmid  <jschmid@openismus.com>

	* glom/application.cc: offer_new_or_existing():
	Replace a TODO comment with g_assert_val_if_reached() because
	reaching this branch would mean that the dialog returned